# anata_test_2-bnkw6j

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
src/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/backend/src/: __init__.py
src/backend/src/api/: __init__.py  auth.py  dependencies.py  error_handlers.py  middlewares.py  security.py  server.py  validators.py
src/backend/src/api/routes/: __init__.py  config.py  data.py  health.py  ocr.py  scraping.py  status.py  tasks.py
src/backend/src/cli/: __init__.py  main.py
src/backend/src/cli/commands/: __init__.py  config.py  ocr.py  scrape.py  status.py
src/backend/src/config/: __init__.py  app_config.py  constants.py  logging_config.py  settings.py
src/backend/src/core/: __init__.py  exceptions.py  interfaces.py  models.py  schemas.py  types.py  utils.py
src/backend/src/db/: __init__.py  firestore.py
src/backend/src/db/models/: __init__.py  data_object.py  (+3 more)
src/backend/src/monitoring/: __init__.py  logger.py  metrics.py  profiler.py  tracing.py
src/backend/src/ocr/: __init__.py  engine.py  extractors.py  processors.py  validators.py
src/backend/src/scraping/: __init__.py  extractors.py  middlewares.py  pipelines.py  settings.py
src/backend/src/security/: __init__.py  encryption.py  key_management.py  rate_limiter.py  token_service.py
src/backend/src/services/: __init__.py  data_service.py  ocr_service.py  scraping_service.py  storage_service.py  task_service.py
src/backend/src/storage/: __init__.py  cloud_storage.py  interfaces.py  local.py
src/backend/src/tasks/: __init__.py  base.py  ocr_tasks.py  scheduler.py  scraping_tasks.py  worker.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/integration/: __init__.py  test_api.py  test_ocr.py  test_scraping.py  test_storage.py  test_tasks.py
src/backend/tests/unit/: __init__.py  test_cli.py  test_config.py  test_models.py  test_security.py  test_services.py  test_utils.py
src/backend/tests/utils/: __init__.py  factories.py  fixtures.py  mocks.py
(+67 files in other folders)
